compiler/kernc_cli/tests/soundness/run-pass/specialization/generic_inference_uses_supertrait_object_assoc_binding.rn
// exit: 0

type Base[N: usize] = trait {
    type Out;
    make: fn() Out,
};

type Derived[N: usize]: Base[N] = trait {};

type X = struct {};

impl[N: usize] *X: Derived[N] {}

impl *X: Base[4] {
    type Out = i64;

    fn make() Out {
        return 7;
    }
}

impl[N: usize] *X: Base[N] {
    type Out = i32;

    fn make() Out {
        return 1;
    }
}

fn take[T](value: *Base[4, Out = T]) T {
    return value.make();
}

fn main() i32 {
    let x = X.{};
    let value = *Derived[4].{ x.& };
    return (take(value) as i32) - 7;
}
